[package]
name = "paho-mqtt-sys"
version = "0.2.1"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>"]
homepage = "https://github.com/eclipse/paho.mqtt.rust"
repository = "https://github.com/eclipse/paho.mqtt.rust"
keywords = [ "MQTT", "IoT", "Paho", "messaging" ]
license = "EPL-1.0"
package = "build.rs"
description = """
Rust wrapper for the Paho MQTT C Client Library.
This is part of the official Eclipse Paho Rust Client Library.
"""

# The build features are:
#   "bundled" - use/build the bundled Paho C library.
#   "build_bindgen" - Use 'bindgen' to regenerate the bindings to the C library.
#   "ssl" - Enable SSL features and link to the Paho C library that uses SSL.

[features]
default = ["bundled", "build_bindgen"]
bundled = ["cmake"]
build_bindgen = ["bindgen"]
ssl = []

[build-dependencies]
bindgen = { version = "0.54", optional = true, features = ["logging"] }
cmake = { version = "0.1", optional = true }
env_logger = "0.7"
log = "0.4"
